[package]
name = "klinker"
version = "2.0.6"
authors = ["Luke Newcomb <newcomb.luke@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "The Kerbal Compiler Collection linker for kOS"
readme = "README.md"
homepage = "https://github.com/newcomb-luke/kOS-KLinker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
flate2 = "1.0"
kerbalobjects = "3.1.12"

[[bin]]
name = "kld"
path = "src/main.rs"
