[package]
name = "klinker"
version = "2.0.9"
authors = ["Luke Newcomb <newcomb.luke@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "The Kerbal Compiler Collection linker for kOS"
readme = "README.md"
homepage = "https://github.com/newcomb-luke/kOS-KLinker"

[dependencies]
clap = "~2.34.0"
flate2 = "1.0"
kerbalobjects = "3.1.12"

[[bin]]
name = "kld"
path = "src/main.rs"
