[package]
name = "klinker"
version = "3.0.0"
authors = ["Luke Newcomb <newcomb.luke@protonmail.com>"]
edition = "2021"
license = "GPL-3.0"
description = "The Kerbal Compiler Collection linker for kOS"
readme = "README.md"
homepage = "https://github.com/newcomb-luke/kOS-KLinker"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
flate2 = "1.0"
kerbalobjects = "4.0"

[[bin]]
name = "kld"
path = "src/main.rs"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
